RESOLVED FIXED217187
[DRT] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/active-processing.https.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=217187
Summary [DRT] imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffers...
Chris Dumez
Reported 2020-10-01 13:14:28 PDT
imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/active-processing.https.html is flaky: --- /Volumes/Work/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/active-processing.https-expected.txt +++ /Volumes/Work/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/imported/w3c/web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/active-processing.https-actual.txt @@ -4,8 +4,8 @@ PASS Executing "verify count change" PASS Audit report PASS > [Setup graph] -PASS AudioWorklet and graph construction resolved correctly. -PASS < [Setup graph] All assertions passed. (total 1 assertions) +FAIL X AudioWorklet and graph construction rejected incorrectly with ReferenceError: Can't find variable: AudioWorkletNode. Got Promise. assert_true: expected true got false +FAIL < [Setup graph] 1 out of 1 assertions were failed. assert_true: expected true got false PASS > [verify count change] FAIL X Number of channels changed is not true. Got false. assert_true: expected true got false PASS Index where input channel count changed is less than or equal to 1280. @@ -20,5 +20,5 @@ Index Actual [0] 0 assert_true: expected true got false FAIL < [verify count change] 3 out of 4 assertions were failed. assert_true: expected true got false -FAIL # AUDIT TASK RUNNER FINISHED: 1 out of 2 tasks were failed. assert_true: expected true got false +FAIL # AUDIT TASK RUNNER FINISHED: 2 out of 2 tasks were failed. assert_true: expected true got false
Attachments
Patch (3.73 KB, patch)
2020-10-01 13:19 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-10-01 13:19:19 PDT
EWS
Comment 2 2020-10-01 16:41:46 PDT
Committed r267860: <https://trac.webkit.org/changeset/267860> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410262 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-01 16:42:18 PDT
Alexey Proskuryakov
Comment 4 2020-10-03 09:56:51 PDT
Very nice.
Note You need to log in before you can comment on or make changes to this bug.